gitops/cluster-apps/nova-wiki/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nova-wiki-app
  labels:
    app.kubernetes.io/part-of: nova-wiki
spec:
  replicas: 1
  selector: 
    matchLabels: 
      deployment: nova-wiki-app
  template:
    metadata:
      labels: 
        deployment: nova-wiki-app
    spec:
      containers:
        - name: nova-wiki-app
          image: quay.nova.local/iss/wikijs:2.5.304
          ports:
            - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
                drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile: 
              type: RuntimeDefault
